--- a/style.css
+++ b/style.css
@@ -3,22 +3,22 @@
 
 body{
     font-size: var(--fs-16);
-    color: var(--dark);
     font-family: 'Poppins', sans-serif;
 }
 :root{
     /* Color */
-    --primary: #d1d1d1;
-    --secondary: #a4a4a4;
+    --primary: #222;
+    --secondary: #333;
     --helper: #289bde;
     --pure: #fff;
-    --black: #222;
     --dark: #777777;
+    --text: #a4a4a4;
 
     /* Font Size */
     --fs-16: 1rem;
     --fs-18: 1.1rem; /*h5,h6*/
     --fs-20: 1.2rem; /*h4*/
+    --fs-40: 2.5rem; /*logo*/
     --fs-65: 4rem; /*h1*/
     --fs-45: 2.8rem; /*h2*/
     --fs-25: 1.5rem; /*h3*/
@@ -26,4 +26,24 @@ body{
     /* Font Weight */
     --fw-600: 600;
     --fw-500: 500; /*li, h6, p, a*/
+    --fw-400: 400;
+}
+
+/* Bootstrap Override*/
+.logo{
+    font-size: var(--fs-40);
+    color: var(--primary);
+    font-weight: var(--fw-500);
+}
+.menubar li a{
+    margin: 0 1rem;
+}
+.top-btn{
+    border-color: var(--helper);
+    color: var(--helper);
+}
+.top-btn:hover{
+    background-color: var(--helper);
+    border-color: var(--helper);
+    color: var(--pure);
 }
