--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     --fs-16: 1rem;
     --fs-30: 1.8rem;
     --fs-45: 2.8rem; 
+    --fs-60: 3.7rem;
     /* Font Weight */
     --fw-600: 600;
     --fw-500: 500; 
@@ -45,6 +46,14 @@ h2 {
 .menubar li a{
     margin: 0 1rem;
 }
+.carousel-inner, .carousel-item{
+    height: 600px;
+}
+.carousel-item img{
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
 .img-overlay::after{
     content: '';
     display: block;
@@ -58,20 +67,17 @@ h2 {
 .caption{
     z-index: 1;
     height: 100%;
-    position: absolute;
     top: 50%;
-    left: 50%;
+    left: 0;
     right: 0;
-    margin: auto;
-    transform: translateX(-50%);
-    width: 80%;
+    transform: translate(50% -50%);
 }
 .caption h1{
-    font-size: 4vw;
+    font-size: var(--fs-60);
     font-weight: var(--fw-600);
 }
 .caption p{
-    font-size: 1vw;
+    font-size: var(--fs-16);
 }
 .our-courses span{
     font-weight: var(--fw-500);
