--- a/style.css
+++ b/style.css
@@ -38,23 +38,23 @@ h2 {
 }
 /* Custom Styles */
 /* Header & Main */
-.logo{
+.navbar .logo{
     font-size: var(--fs-30);
     color: var(--primary);
     font-weight: var(--fw-500);
 }
-.menubar li a{
+.navbar .menubar li a{
     margin: 0 1rem;
 }
 .carousel-inner, .carousel-item{
     height: 600px;
 }
-.carousel-item img{
+.carousel-inner .carousel-item img{
     width: 100%;
     height: 600px;
     object-fit: cover;
 }
-.img-overlay::after{
+.carousel-inner .img-overlay::after{
     content: '';
     display: block;
     position: absolute;
@@ -64,7 +64,7 @@ h2 {
     right: 0;
     background: rgba(0,0,0,.8);
 }
-.caption{
+.carousel-item .caption{
     z-index: 1;
     height: 100%;
     top: 50%;
@@ -72,23 +72,23 @@ h2 {
     right: 0;
     transform: translate(50% -50%);
 }
-.caption h1{
+.carousel-item .caption h1{
     font-size: var(--fs-60);
     font-weight: var(--fw-600);
 }
-.caption p{
+.carousel-item .caption p{
     font-size: var(--fs-16);
 }
 .our-courses span{
     font-weight: var(--fw-500);
 }
-.card-bg{
+.about-us .card-bg{
     background: rgba(136, 136, 242, 0.099);
 }
-.enrollment{
+.get-enrolled .enrollment{
     padding: 80px 0;
 }
-.counter{
+.about-us .counter{
     width: 80%;
 }
 /* Footer */
